; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-helpers.c_gl_create_buffer.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-helpers.c_gl_create_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"glBufferData\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gl_create_buffer(i32 %0, i32* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @gl_gen_buffers(i32 1, i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %34

17:                                               ; preds = %5
  %18 = load i32, i32* %7, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @gl_bind_buffer(i32 %18, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %17
  store i32 0, i32* %6, align 4
  br label %34

24:                                               ; preds = %17
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* %11, align 4
  %29 = call i32 @glBufferData(i32 %25, i32 %26, i32* %27, i32 %28)
  %30 = call i32 @gl_success(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @gl_bind_buffer(i32 %31, i32 0)
  %33 = load i32, i32* %12, align 4
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %24, %23, %16
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @gl_gen_buffers(i32, i32*) #1

declare dso_local i32 @gl_bind_buffer(i32, i32) #1

declare dso_local i32 @glBufferData(i32, i32, i32*, i32) #1

declare dso_local i32 @gl_success(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
